# inference-server

./: .gitignore  README.md  pyproject.toml
docs/: verify-onnx.md
src/inference_server/: __init__.py  __main__.py  app.py  config.py  errors.py  routes.py
src/inference_server/engines/: __init__.py  base.py  echo.py  factory.py  onnx.py
src/inference_server/schemas/: openai.py
tests/: factories.py  test_app.py  test_chat_completions.py  test_chat_completions_endpoint.py  test_config.py  test_echo_engine.py  test_engine_factory.py  test_health.py  test_models_and_errors.py  test_models_endpoint.py  test_onnx_discovery.py  test_onnx_engine.py  test_openai_messages.py  test_openai_sdk_compat.py
